force-app/main/default/objects/Account/fields/Company_Culture__c.field-meta.xml
<CustomField>
    <fullName>Company_Culture__c</fullName>
    <label>Company Culture</label>
    <type>TextArea</type>
</CustomField>