force-app/main/default/objects/Account/fields/Company_Values__c.field-meta.xml
<CustomField>
    <fullName>Company_Values__c</fullName>
    <description>JSON array of company values</description>
    <label>Company Values</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>