force-app/main/default/objects/Account/fields/Remote_Work_Policy__c.field-meta.xml
<CustomField>
    <fullName>Remote_Work_Policy__c</fullName>
    <description>Remote work policy shown on candidate swipe card back.</description>
    <label>Remote Work Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>