force-app/main/default/objects/Account/fields/Why_Join__c.field-meta.xml
<CustomField>
    <fullName>Why_Join__c</fullName>
    <description>Why join statement shown on candidate swipe card back.</description>
    <label>Why Join</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>